--- a/index.html
+++ b/index.html
@@ -57,13 +57,14 @@
             </div>
             <div class="hero">
                 <div class="conteudo-hero">
-                    <h1>Barbearia do Marcão</h1>
-                    <br>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni cupiditate neque nihil totam nam excepturi quia eum officia vero! Fuga esse deserunt, vitae impedit ipsam provident molestiae hic omnis porro!
-                    <br>
-                    <button>
-                        AGENDE SEU CORTE
-                    </button>
+                        <h1>Barbearia do Marcão</h1>
+                        <br>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni cupiditate neque nihil totam nam excepturi quia eum officia vero! Fuga esse deserunt, vitae impedit ipsam provident molestiae hic omnis porro!
+                        <br>
+                        <button>
+                            AGENDE SEU CORTE
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -107,25 +108,25 @@
                  </div>
                  <div class="services-menu">
                      <div class="service-item">
-                         <img src="/img/icons/tesoura.png">
+                         <img src="./img/icons/tesoura.png">
                          <h3>Cabelo</h3>
                          <div class="line"></div>
                          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ut et massa mi.</p>
                      </div>
                      <div class="service-item">
-                         <img src="/img/icons/nav.png">
+                         <img src="./img/icons/nav.png">
                          <h3>Barba</h3>
                          <div class="line"></div>
                          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ut et massa mi.</p>
                      </div>
                      <div class="service-item">
-                         <img src="/img/icons/maq.png">
+                         <img src="./img/icons/maq.png">
                          <h3>Cabelo + Barba</h3>
                          <div class="line"></div>
                          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ut et massa mi.</p>
                      </div>
                      <div class="service-item">
-                         <img src="/img/icons/secador.png">
+                         <img src="./img/icons/secador.png">
                          <h3>Luzes</h3>
                          <div class="line"></div>
                          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ut et massa mi.</p>
@@ -253,49 +254,49 @@
                     <div class="carousel-track">
                         <div class="carousel-item">
                             <div class="mask">
-                                <img src="/img/photo1.jpg" alt="Foto 1">
+                                <img src="./img/photo1.jpg" alt="Foto 1">
                             </div>
                             <h3>Side Parting 1</h3>
                             <p>Texto explicativo sobre a foto 1.</p>
                         </div>
                         <div class="carousel-item">
                             <div class="mask">
-                                <img src="/img/photo2.jpg" alt="Foto 1">
+                                <img src="./img/photo2.jpg" alt="Foto 1">
                             </div>
                             <h3>Careca total</h3>
                             <p>Texto explicativo sobre a foto 2.</p>
                         </div>
                         <div class="carousel-item">
                             <div class="mask">
-                                <img src="/img/photo1.jpg" alt="Foto 1">
+                                <img src="./img/photo1.jpg" alt="Foto 1">
                             </div>
                             <h3>Moicano</h3>
                             <p>Texto explicativo sobre a foto 3.</p>
                         </div>
                         <div class="carousel-item">
                             <div class="mask">
-                                <img src="/img/photo2.jpg" alt="Foto 1">
+                                <img src="./img/photo2.jpg" alt="Foto 1">
                             </div>
                             <h3>Título 4</h3>
                             <p>Texto explicativo sobre a foto 4.</p>
                         </div>
                         <div class="carousel-item">
                             <div class="mask">
-                                <img src="/img/photo1.jpg" alt="Foto 1">
+                                <img src="./img/photo1.jpg" alt="Foto 1">
                             </div>
                             <h3>Título 4</h3>
                             <p>Texto explicativo sobre a foto 4.</p>
                         </div>
                         <div class="carousel-item">
                             <div class="mask">
-                                <img src="/img/photo2.jpg" alt="Foto 1">
+                                <img src="./img/photo2.jpg" alt="Foto 1">
                             </div>
                             <h3>Side 4</h3>
                             <p>Texto explicativo sobre a foto 4.</p>
                         </div>
                         <div class="carousel-item">
                             <div class="mask">
-                                <img src="/img/photo1.jpg" alt="Foto 1">
+                                <img src="./img/photo1.jpg" alt="Foto 1">
                             </div>
                             <h3>Título 4</h3>
                             <p>Texto explicativo sobre a foto 4.</p>
@@ -335,21 +336,21 @@
                 <div class="barbers-photo">
                     <div class="barbers-item">
                         <div class="mask">
-                            <img src="/img/Marcão.jpg">
+                            <img src="./img/Marcão.jpg">
                         </div>
                         <h3>Marcão</h3>
                     </div>
 
                     <div class="barbers-item">
                         <div class="mask">
-                            <img src="/img/Pedro.jpg">
+                            <img src="./img/Pedro.jpg">
                         </div>
                         <h3>Marcão</h3>
                     </div>
 
                     <div class="barbers-item">
                         <div class="mask">
-                            <img src="/img/Paulo.jpg">
+                            <img src="./img/Paulo.jpg">
                         </div>
                         <h3>Marcão</h3>
                     </div>
@@ -437,37 +438,39 @@
 
                     <div class="social">
                         <ul>
-                            <li>
+                            <a href="#"><li>
                                 <i class="fa-brands fa-facebook"></i>
-                            </li>
-                            <li>
+                            </li></a>
+                            <a href="#"><li>
                                 <i class="fa-brands fa-square-instagram"></i>
-                            </li>
-                            <li>
+                            </li></a>
+                            <a href="#"><li>
                                 <i class="fa-brands fa-youtube"></i>
-                            </li>
+                            </li></a>
                         </ul>
                     </div>
-
-                    
                 </div>
-                <div class="map"></div>
-            </div>
+
+                <div class="map">
+                </div>
+
+		    </div>
+        </div>
 
             <div class="logo-e-social">
                 <div class="logo-rodape"> </div>
                     
                 <div class="social-bigger">
                         <ul>
-                            <li>
+                            <a href="#"><li>
                                 <i class="fa-brands fa-facebook"></i>
-                            </li>
-                            <li>
+                            </li></a>
+                            <a href="#"><li>
                                 <i class="fa-brands fa-square-instagram"></i>
-                            </li>
-                            <li>
+                            </li></a>
+                            <a href="#"><li>
                                 <i class="fa-brands fa-youtube"></i>
-                            </li>
+                            </li></a>
                         </ul>
                 </div>
             </div>
