--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
             <div class="header">
                 <div class="conteudo-header">
                     <div class="logo">
-                        <img src="./img/logo3.png" width=80px>
+                        <img src="./img/logo.png" width=80px>
                     </div>
                     <nav>
                         <ul>
                             <li>
                                 <div class="info">
                                     <i class="fa-solid fa-location-dot"></i>
-                                    <span>Av Paulista, 900 - Bela Vista - SP</span>
+                                    <span>Rua Fleet, 186 - Londrina - PR</span>
                                 </div>
                             </li>
                             <li>
                                 <div class="info">
                                     <i class="fa-brands fa-whatsapp"></i>
-                                    <span>11 9999 8888</span>
+                                    <span>43 9999 8888</span>
                                 </div>
                             </li>
                             <li>
@@ -59,7 +59,7 @@
                 <div class="conteudo-hero">
                         <h1>Barbearia do Marcão</h1>
                         <br>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni cupiditate neque nihil totam nam excepturi quia eum officia vero! Fuga esse deserunt, vitae impedit ipsam provident molestiae hic omnis porro!
+                        Bem-vindo à Barbearia do Marcão, na Fleet Street! Aqui, tradição e estilo se encontram em cortes clássicos e modernos. Com ambiente acolhedor e atendimento de primeira, Marcão transforma seu visual com precisão e cuidado. Venha nos visitar hoje!
                         <br>
                         <button>
                             AGENDE SEU CORTE
@@ -77,11 +77,10 @@
                 <h3>Sobre a Barbearia</h3>
                 <h1>Bem-vindo a Barbearia</h1>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit deserunt sapiente optio similique necessitatibus! Tempora, repellat. Velit, facilis maxime quisquam aliquid quod vel molestias possimus commodi inventore ut sint ipsum!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt obcaecati odio iusto eaque explicabo, dicta inventore.
+                    Desde 2015, a Barbearia do Marcão é destaque na Rua Fleet, em Londrina, unindo tradição e inovação. Marcão criou um espaço onde cortes e barbas ganham vida com técnicas clássicas, como navalha e toalha quente, e tendências modernas. Nosso ambiente vintage, com madeira, poltronas confortáveis e música ambiente, oferece uma experiência única, acompanhada de um café quentinho. A equipe de barbeiros qualificados garante atendimento personalizado, valorizando o estilo de cada cliente. Aberta de segunda a sábado, das 10h às 21h, a Barbearia do Marcão é mais que um local de styling – é um ponto de encontro para quem busca tradição e estilo.
                 </p>
             </div>
-            <img src="./img/about.jpg" width="370px">
+            <img src="./img/about.jpg">
         </div>
         </div>
         <!-- FINAL ABOUT -->
@@ -92,8 +91,8 @@
             <span>
                 <i class="fa-solid fa-quote-right"></i>
             </span>
-            <p>A melhor barbearia de São Paulo</p>
-            <h4>Karl Smith</h4>
+            <p>A melhor barbearia de Londrina</p>
+            <h4>Adolfo Pirelli</h4>
         </div>
         <!-- FINAL TESTIMONY -->
 
@@ -111,25 +110,25 @@
                          <img src="./img/icons/tesoura.png">
                          <h3>Cabelo</h3>
                          <div class="line"></div>
-                         <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ut et massa mi.</p>
+                         <p>Estilo e precisão para valorizar seu visual.</p>
                      </div>
                      <div class="service-item">
                          <img src="./img/icons/nav.png">
                          <h3>Barba</h3>
                          <div class="line"></div>
-                         <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ut et massa mi.</p>
+                         <p>Modelagem e acabamento impecáveis.</p>
                      </div>
                      <div class="service-item">
                          <img src="./img/icons/maq.png">
                          <h3>Cabelo + Barba</h3>
                          <div class="line"></div>
-                         <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ut et massa mi.</p>
+                         <p>Combo completo para renovar seu estilo.</p>
                      </div>
                      <div class="service-item">
                          <img src="./img/icons/secador.png">
                          <h3>Luzes</h3>
                          <div class="line"></div>
-                         <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ut et massa mi.</p>
+                         <p>Ilumine o cabelo com mechas sutis e modernas.</p>
                      </div>
                  </div>
              </div>
@@ -140,50 +139,47 @@
 
         <div class="price-menu">
             <div class="price-menu-column">
-                <div id="prices">
-                <h3>Lista de cortes</h3>
-                </div>
-                <h2>Cortes Clássicos</h2>
+                <h2>Cortes de Cabelo</h2>
                 <ul>
                     <li>
-                        <span>Corte 1</span>
+                        <span>Corte Militar</span>
                         <span class="line-price"></span>
                         <span>R$40</span>
                     </li>
                     <li>
-                        <span>Corte 1</span>
+                        <span>Social Clássico</span>
                         <span class="line-price"></span>
-                        <span>R$40</span>
+                        <span>R$45</span>
                     </li>
                     <li>
-                        <span>Corte 1</span>
+                        <span>Fade (degradê)</span>
                         <span class="line-price"></span>
-                        <span>R$40</span>
+                        <span>R$50</span>
                     </li>
                     <li>
-                        <span>Corte 1</span>
+                        <span>Undercut</span>
                         <span class="line-price"></span>
-                        <span>R$40</span>
+                        <span>R$50</span>
                     </li>
                     <li>
-                        <span>Corte 1</span>
+                        <span>Pompadour</span>
                         <span class="line-price"></span>
-                        <span>R$40</span>
+                        <span>R$60</span>
                     </li>
                     <li>
-                        <span>Corte 1</span>
+                        <span>Moicano</span>
                         <span class="line-price"></span>
-                        <span>R$40</span>
+                        <span>R$50</span>
                     </li>
                     <li>
-                        <span>Corte 1</span>
+                        <span>Corte Caesar</span>
                         <span class="line-price"></span>
-                        <span>R$40</span>
+                        <span>R$45</span>
                     </li>
                     <li>
-                        <span>Corte 1</span>
+                        <span>Texturizado moderno</span>
                         <span class="line-price"></span>
-                        <span>R$40</span>
+                        <span>R$55</span>
                     </li>
                 </ul>
             </div>
@@ -191,48 +187,47 @@
             <div class="line-vert"></div>
         
             <div class="price-menu-column">
-                <h3>Estilos de barba</h3>
-                <h2>Cortes Clássicos</h2>
+                <h2>Barbas</h2>
                 <ul>
                     <li>
-                        <span>Barba1</span>
+                        <span>Aparar Barba</span>
+                        <span class="line-price"></span>
+                        <span>R$25</span>
+                    </li>
+                    <li>
+                        <span>Barba Desenhada</span>
+                        <span class="line-price"></span>
+                        <span>R$30</span>
+                    </li>
+                    <li>
+                        <span>Barba Completa (com toalha quente)</span>
+                        <span class="line-price"></span>
+                        <span>R$35</span>
+                    </li>
+                    <li>
+                        <span>Barba Navalhada</span>
                         <span class="line-price"></span>
                         <span>R$40</span>
                     </li>
                     <li>
-                        <span>Barba1</span>
+                        <span>Modelagem de Barba</span>
                         <span class="line-price"></span>
-                        <span>R$40</span>
+                        <span>R$30</span>
                     </li>
                     <li>
-                        <span>Barba1</span>
+                        <span>Cavanhaque</span>
                         <span class="line-price"></span>
-                        <span>R$40</span>
+                        <span>R$20</span>
                     </li>
                     <li>
-                        <span>Barba1</span>
+                        <span>Bigode</span>
                         <span class="line-price"></span>
-                        <span>R$40</span>
+                        <span>R$50</span>
                     </li>
                     <li>
-                        <span>Barba1</span>
+                        <span>Combo Barba e Sobrancelha</span>
                         <span class="line-price"></span>
-                        <span>R$40</span>
-                    </li>
-                    <li>
-                        <span>Barba1</span>
-                        <span class="line-price"></span>
-                        <span>R$40</span>
-                    </li>
-                    <li>
-                        <span>Barba1</span>
-                        <span class="line-price"></span>
-                        <span>R$40</span>
-                    </li>
-                    <li>
-                        <span>Barba1</span>
-                        <span class="line-price"></span>
-                        <span>R$40</span>
+                        <span>R$45</span>
                     </li>
                 </ul>
             </div>
@@ -254,52 +249,45 @@
                     <div class="carousel-track">
                         <div class="carousel-item">
                             <div class="mask">
-                                <img src="./img/photo1.jpg" alt="Foto 1">
+                                <img src="./img/militar.jpg" alt="Foto 1">
                             </div>
-                            <h3>Side Parting 1</h3>
-                            <p>Texto explicativo sobre a foto 1.</p>
+                            <h3>Militar</h3>
                         </div>
                         <div class="carousel-item">
                             <div class="mask">
-                                <img src="./img/photo2.jpg" alt="Foto 1">
+                                <img src="./img/degrade.jpg" alt="Foto 2">
                             </div>
-                            <h3>Careca total</h3>
-                            <p>Texto explicativo sobre a foto 2.</p>
+                            <h3>Pompadour</h3>
                         </div>
                         <div class="carousel-item">
                             <div class="mask">
-                                <img src="./img/photo1.jpg" alt="Foto 1">
+                                <img src="./img/photo1.jpg" alt="Foto 3">
+                            </div>
+                            <h3>Texturizado</h3>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="mask">
+                                <img src="./img/photo2.jpg" alt="Foto 4">
+                            </div>
+                            <h3>Corte social</h3>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="mask">
+                                <img src="./img/moicano.jpg" alt="Foto 5">
                             </div>
                             <h3>Moicano</h3>
-                            <p>Texto explicativo sobre a foto 3.</p>
                         </div>
                         <div class="carousel-item">
                             <div class="mask">
-                                <img src="./img/photo2.jpg" alt="Foto 1">
+                                <img src="./img/undercut.jpeg" alt="Foto 6">
                             </div>
-                            <h3>Título 4</h3>
-                            <p>Texto explicativo sobre a foto 4.</p>
+                            <h3>Undercut</h3>
                         </div>
                         <div class="carousel-item">
                             <div class="mask">
-                                <img src="./img/photo1.jpg" alt="Foto 1">
+                                <img src="./img/caesar.png" alt="Foto 7">
                             </div>
-                            <h3>Título 4</h3>
-                            <p>Texto explicativo sobre a foto 4.</p>
-                        </div>
-                        <div class="carousel-item">
-                            <div class="mask">
-                                <img src="./img/photo2.jpg" alt="Foto 1">
-                            </div>
-                            <h3>Side 4</h3>
-                            <p>Texto explicativo sobre a foto 4.</p>
-                        </div>
-                        <div class="carousel-item">
-                            <div class="mask">
-                                <img src="./img/photo1.jpg" alt="Foto 1">
-                            </div>
-                            <h3>Título 4</h3>
-                            <p>Texto explicativo sobre a foto 4.</p>
+                            <h3>Caesar</h3>
                         </div>
                     </div>
                 </div>
@@ -327,10 +315,9 @@
             <div class="bg">
                 <div class="barbers-header">
                     <div class="line"></div>
-                    <span>Veja as fotos e selecione abaixo</span>
-                    <h2>Cabelo / Barba</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt esse amet beatae ex vel iusto at magnam temporibus aspernatur reiciendis voluptas labore, cupiditate quam sint dolore possimus aliquam rerum sequi.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quasi magnam aut, iste cumque adipisci alias eligendi possimus debitis, nesciunt quis expedita sit dolores amet non numquam sequi ullam molestias?
+                    <h2>Profissionais</h2>
+                    <p>
+                        Marcão, Pedro e Marco formam um time de barbeiros experientes, apaixonados pela arte do corte e do cuidado masculino. Juntos, unem tradição e modernidade, oferecendo cortes precisos, design de barba personalizado e um atendimento de excelência, sempre focado em realçar o estilo e a personalidade de cada cliente.
                     </p>
                 </div>
                 <div class="barbers-photo">
@@ -345,14 +332,14 @@
                         <div class="mask">
                             <img src="./img/Pedro.jpg">
                         </div>
-                        <h3>Marcão</h3>
+                        <h3>Pedro Bianchi</h3>
                     </div>
 
                     <div class="barbers-item">
                         <div class="mask">
                             <img src="./img/Paulo.jpg">
                         </div>
-                        <h3>Marcão</h3>
+                        <h3>Marco Meyer</h3>
                     </div>
                 </div>
             </div>
@@ -412,13 +399,13 @@
                                 <li>
                                     <div class="info">
                                         <i class="fa-solid fa-location-dot"></i>
-                                        <span>Av Paulista, 900 - Bela Vista - SP</span>
+                                        <span>Rua Fleet, 186 - Londrina - PR</span>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="info">
                                         <i class="fa-brands fa-whatsapp"></i>
-                                        <span>11 9999 8888</span>
+                                        <span>43 9999 8888</span>
                                     </div>
                                 </li>
                                 <li>
@@ -438,13 +425,13 @@
 
                     <div class="social">
                         <ul>
-                            <a href="#"><li>
+                            <a href="www.facebook.com"><li>
                                 <i class="fa-brands fa-facebook"></i>
                             </li></a>
-                            <a href="#"><li>
+                            <a href="www.instagram.com"><li>
                                 <i class="fa-brands fa-square-instagram"></i>
                             </li></a>
-                            <a href="#"><li>
+                            <a href="www.youtube.com"><li>
                                 <i class="fa-brands fa-youtube"></i>
                             </li></a>
                         </ul>
@@ -485,8 +472,6 @@
             <!--FIM RODAPÉ-->
 
          </div>
-
-
 
     </div>
     <script src="script.js"></script>
